test/conformance/kuttl/mutate/clusterpolicy/cornercases/mutate-using-default-context/01-pod.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: pod.yaml
  shouldFail: false
