test/conformance/kuttl/mutate/clusterpolicy/cornercases/mutate-using-default-context/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: busybox:1.35
    args:
    - sleep
    - 1d
    volumeMounts:
      - mountPath: /bar
        name: vault-secret
  - name: nginx
    image: busybox:1.35
  volumes:
  - name: vault-secret
    emptyDir:
      medium: Memory
