test/conformance/kuttl/mutate/clusterpolicy/cornercases/mutate-using-default-context/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: unmount-serviceaccount-token
spec:
  background: false
  rules:
    - name: unmount-vol-volmount
      match:
        any:
        - resources:
            kinds:
            - Pod
            selector:
              matchExpressions:
              - key: corp.org/can-use-serviceaccount
                operator: DoesNotExist
      context:
      - name: tokenvolname
        variable:
          jmesPath: request.object.spec.volumes[?projected].name[?starts_with(@,'kube-api-access-')] | [0]
          default: ''
      preconditions:
        all:
        - key: "{{ tokenvolname }}"
          operator: Equals
          value: "?*"
      mutate:
        foreach:
          - list: request.object.spec.volumes[]
            order: Descending
            preconditions:
              all:
              - key: projected
                operator: AnyIn
                value: "{{ element.keys(@) }}"
              - key: "{{ element.name }}"
                operator: Equals
                value: "kube-api-access-*"
            patchesJson6902: |-
              - path: /spec/volumes/{{elementIndex}}
                op: remove
          - list: request.object.spec.containers[]
            foreach:
            - list: element.volumeMounts
              order: Descending
              preconditions:
                all:
                - key: "{{element.name}}"
                  operator: AnyIn
                  value: "{{ tokenvolname }}"
              patchesJson6902: |-
                - path: /spec/containers/{{elementIndex0}}/volumeMounts/{{elementIndex1}}
                  op: remove
