test/conformance/kuttl/mutate/clusterpolicy/cornercases/mutate-using-default-context/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: unmount-serviceaccount-token
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
